gcc/testsuite/algol60.dg/fail/array1.a60
'comment' { dg-do compile } ;
'begin'
 'integer' 'array' a; 'comment' { dg-error "array bounds" } ;
'end';
